rename event registration step 2 and fix alignment

--- a/sass-compile/scss/_registration.scss
+++ b/sass-compile/scss/_registration.scss
@@ -55,6 +55,11 @@
                 top: -50px;
                 left: 50%;
                 transform: translateX(-50%);
+
+                display: flex;
+                align-items: center;
+                min-height: 32px;
+
                 @include font-size-xs();
                 opacity: 50%;
                 @include media-breakpoint-down(sm) {
@@ -64,7 +69,7 @@
 
             &.active {
                 background-color: $cs-dark-gray;
-                
+
                 span {
                     opacity: 100%;
                     @include media-breakpoint-down(sm) {
@@ -95,7 +100,7 @@
         .name {
             @include font-size-xs();
         }
-        
+
         .line,
         .sum-line {
             padding: 20px 0;
